--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,39 @@
-<h1>Ultimate Burger</h1>
+<h1 class="mainHeader">Burgers!</h1>
+<div class="container">
+  <div class="sideOne">
+    <h2 class="header">Burgers that are ready to be eaten!</h2>
 
-<h2>Burgers to be eaten!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#unless false}}
-      {{> burgers/burger-block devoured=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Devoured Burgers!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devoured=false}}
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+    <ul>
+      {{#each burgers}}
+      {{#unless devoured}}
+      {{> burger-block}}
+      {{/unless}}
+      {{/each}}
+    </ul>
   </div>
+  <div class="sideTwo">
+    <h2 class="header">Burgers that are eaten!</h2>
 
-  <div class="form-group">
-    <label for="sleepy">Sleep?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
+    <ul class="header">
+      {{#each burgers}}
+      {{#if devoured}}
+      <li>
+        Devoured Burger: {{this.name}}
+      </li>
+      {{/if}}
+      {{/each}}
+    </ul>
   </div>
+</div>
+<h2 class="header">Add a Burger</h2>
+<div class="flex-box2">
+  <form class="create-form">
 
-  <button type="submit">Add Cat</button>
-</form>
+    <div class="form-group">
+      <label for="ca">Burger Name:</label>
+      <input type="text" id="ca" name="name">
+    </div>
+
+    <button type="submit" class="burgerButton"><i class="fas fa-hamburger"></i> Add Burger</button>
+  </form>
+</div>
