--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
       </div>
     </div>
 
-    <div class= "col-sm-4">
+    <div class="col-sm-4">
       <img id="burgerImg" src="https://i.imgur.com/eE0Y2TT.jpg" alt="burger">
     </div>
     <div class="sideTwo">
@@ -37,13 +37,28 @@
   </div>
 </div>
 
-<h2 class="header">Add a Burger</h2>
-<form class="create-form">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-5">
 
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+    </div>
   </div>
+  <div class="row">
+    <div class="col-sm-2">
+      <h2 class="addHeader">Add a Burger</h2>
+      <form class="create-form">
 
-  <button type="submit" class="burgerButton"><i class="fas fa-hamburger"></i> Add Burger</button>
-</form>
+        <div class="form-group">
+          <input type="text" id="ca" name="name">
+        </div>
+
+        <button type="submit" class="burgerButton"><i class="fas fa-hamburger"></i> Add Burger</button>
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-5">
+
+    </div>
+  </div>
+</div>
