minor css changed

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -46,4 +46,11 @@
   font-family: 'Sansita Swashed', cursive;
   border-radius: 5px;
   background-color: white;
+  text-align: center;
+}
+
+#ca {
+  width: 400px;
+  position: relative;
+  left: 300px;
 }
