--- a/views/partials/burger-block.handlebars
+++ b/views/partials/burger-block.handlebars
@@ -1,9 +1,9 @@
 <li>
-	{{burger_name}}
+	{{!-- {{burger_name}} --}}
 
-	<button class="orderAgain-btn btn waves-effect green btn-large" type="submit" name="action" data-id="{{id}}" data-newdevoured="{{devoured}}">
+	{{!-- <button class="orderAgain-btn btn waves-effect green btn-large" type="submit" name="action" data-id="{{id}}" data-newdevoured="{{devoured}}">
 		{{#if devoured}}DEVOUR!{{else}}ORDER AGAIN{{/if}}
-	</button>
+	</button> --}}
 
-	<button class="devour-btn btn waves-effect red lighten-1 btn-large" type="submit" name="action" data-id="{{this.id}}">Devour!</button>
+	<button class="devour-btn btn waves-effect red lighten-1 btn-medium" type="submit" name="action" data-id="{{this.id}}">Devour {{burger_name}} <i class="fas fa-hamburger"></i></button>
 </li>
