--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,13 @@
-<h1 class="mainHeader">The Ultimate Burger Builder</h1>
+
 <div class="container">
+  <div class= "row">
+    <div class = "col s12"><h1 class="mainHeader">The Ultimate Burger Builder</h1>
+    </div>
+  </div>
   <div class="row">
     <div class="sideOne">
-      <div class="col-sm-4">
-        <h2 class="leftHeader">Burgers that are ready to be eaten!</h2>
+      <div class="col s4">
+        <h2 class="leftHeader">Burger Orders:</h2>
 
 
         <ul>
@@ -15,12 +19,13 @@
       </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col s4">
       <img id="burgerImg" src="https://i.imgur.com/eE0Y2TT.jpg" alt="burger">
     </div>
-    <div class="sideTwo">
-      <div class="col-sm-4">
-        <h2 class="rightHeader">Burgers that are eaten!</h2>
+    <div class="col s4">
+      <div class="sideTwo">
+
+        <h2 class="rightHeader">Devoured Burgers:</h2>
 
 
         <ul class="header">
@@ -35,16 +40,13 @@
       </div>
     </div>
   </div>
-</div>
 
-<div class="container">
   <div class="row">
-    <div class="col-sm-5">
 
+    <div class="col s4">
     </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-2">
+
+    <div class="col s4">
       <h2 class="addHeader">Add a Burger</h2>
       <form class="create-form">
 
@@ -55,9 +57,8 @@
         <button type="submit" class="burgerButton"><i class="fas fa-hamburger"></i> Add Burger</button>
       </form>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-5">
+
+    <div class="col s4">
 
     </div>
   </div>
