--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,9 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 	<link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 	<title>The Ultimate Burger!</title>
@@ -14,10 +17,11 @@
 <body>
 	{{{ body }}}
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 	<script src="https://kit.fontawesome.com/257de25400.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/assets/js/burgers.js"></script>
+	<script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
 </html>
